feat: добавлена ручка на получение адресов из дадаты
